--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
-    "react-scripts": "^3.2.0"
+    "react-scripts": "^3.2.0",
+    "redux": "^4.0.4"
   },
   "browserslist": {
     "production": [
